# wikipedia-image-caption

./: README.md  pyproject.toml
src/: wikipedia-image-caption.py
